docroot/css/site.css
/*
 ************************************************************
 * HTML tag level settings
 ************************************************************
 */
A:link {text-decoration:none; color:#521919; }
A:visited {text-decoration:none; color:#521919; }
A:active {text-decoration:none; color:#521919; }
A:hover {text-decoration:underline; color:#885555; }

body {
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
  font-style:normal;
  font-weight:normal;
  font-size:large;
  word-spacing:normal;
  margin:0px;
  color:#111111;
  background-color: #fefefd;
  background-image: url('../img/texturePaper.png');
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: scroll;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

img { border:0px; }

/*
 ************************************************************
 * general class and id formatting
 * padding: top right bottom left, or topbottom leftright
 ************************************************************
 */

/* >> topsectiondiv and contained elements */
#mascotdiv { position:absolute; left:10px; top:265px; }
.mascotimg { vertical-align:middle; width:29px; height:14px; }
#topsectiondiv { padding:0px 10px; background:#fffffd;
  box-shadow:8px 8px 4px #cccccc; 
  height:250px; }  /* height adjusted by login.updateAuthentDisplay */
#statictopsectiondiv { height:10px; }
#logodiv { width:470px; padding:5px; float:left; }
#staticlogodiv { position:absolute; left:10px; top:10px; }
#staticadupperspacer { height:120px; }
#topworkdiv { }
#slidesdiv { }
/* left recalculated in layout.initSlideshow, old browsers use this */
.slideimg { position:absolute; left:520px; margin:auto;
  -webkit-transition: opacity 1s ease-in-out;
  -moz-transition: opacity 1s ease-in-out;
  -o-transition: opacity 1s ease-in-out;
  transition: opacity 1s ease-in-out;
}
#topactionsdiv { font-size:x-large; }
#topactionstable { margin:0px; padding:0px; }
#topactionstable td { padding:0px; }
.topnavitemdiv { }

/* >> main display area and contained elements */
#centerhdiv, #centerhdivstatic { font-size:x-large; font-weight:bold; }
#centerhdiv { display:table; margin:10px auto; }
#centerhdivstatic { margin:0px 0px 0px 240px; }
.instructional { font-size:x-large; font-weight:bold; }
#topdiv { position:absolute; left:72px; top:30px; padding:0px 10px;
  text-align:right; font-size:x-small; }
#accountdiv { font-size:small; }
#appspacediv, #appspacedivstatic { }
#appspacediv { padding:10px 10px 0px 10px; margin:auto; }
#appspacedivstatic { clear:both; padding:0px 15px 10px 5px; }
.statrevcontent { padding-left:15px; padding-top:15px; }
#bottomnav { font-size:x-small; text-align:center; 
  word-spacing:20px; padding:0px 20px 5px 20px; }
#centerhdiv { }
#contentdiv { margin:auto; }
#introverview { padding:10px 0px; color:#666; font-size:medium; 
 width:50%; margin:auto; }

.penfont, #penhnamespan { 
  font-style:italic; 
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
/* font-family:"Palatino Linotype", "Book Antiqua", "Palatino", serif;
   This was removed because some people have such a strong association
   of serif fonts with formal docs that it was anti-fun for them. 
   ATTENTION: find some kind of a flourish quill pen font for download
   and use that for any browser that can handle it.
*/
 }
#penhnamespan { font-size:xx-large; }
#homepennamespan { font-size:large; }
#penhbuttonspan { padding:0px 0px 0px 20px; }
#homepenhdiv { float:right; }
#chead { height:0px; clear:both; }  /* top pad if needed for profile content */
#cmain { clear:both; padding: 8px 0px 0px 0px; }
#overlaydiv { position:absolute; left:70px; top:80px; padding: 10px;
  visibility:hidden; border-radius:10px; max-width:85%;
  box-shadow:10px 10px 5px #888888; border: 1px solid #666666; }
#dlgdiv { position:absolute; left:20px; top:60px; padding:10px 20px;
  background:url('../img/dlgback.png') repeat, #eeeeee url('../img/dlgtop.png') repeat-x;
  visibility:hidden; border-radius:10px; max-width:85%;
  box-shadow:10px 10px 5px #888888; border: 1px solid #666666; }
#closeline { text-align:right; font-size:x-small; }
.dlgclosex { float:right; font-size:x-small; }
.floatclear { clear:both; }
.navico, .navicodis { margin:0px 0px 0px 14px; padding:4px; 
  vertical-align:bottom; }
.navicodis { opacity:0.3; filter:alpha(opacity=30); }
.rssico { height:11px; width:11px; vertical-align:middle; padding:0px 5px;}
.svcico, .loginico { margin:0px 0px 0px 20px; border:none; 
  vertical-align:middle; }
.svcico { height:20px; width:20px; }
.loginico { height:32px; width:32px; }
.shareico, .shareicodis { height:32px; width:32px; margin:5px 15px;
  border:none; vertical-align:middle; }
.shareicodis { opacity:0.3; filter:alpha(opacity=30); }
#forgotpwtd { padding:3px 10px; }
#forgotpw { font-size:small; font-style:italic; }
#loginbtd { padding:10px 30px; }
#signinbuttondiv { background:#70bbe9;
 color:#003; font-size:x-large; font-weight:normal;
 padding:5px 10px; display:table; cursor:pointer; 
 border: 1px solid #003; border-radius:5px; box-shadow: 5px 5px 2px #888888 }

/* >> intro layout */
#bookslidediv { text-align:center; }
.bookmarkletlinkdiv { padding:5px 20px; text-align:center; }
.bookmarkletdescr { font-size:small; text-align:right; 
  padding:0px 0px 0px 40px;}
#logindiv { margin:auto; }
#loginform { margin:auto; }
#loginformtable { margin:auto; }
#loginstatdiv { }
.liflab { font-size:large; font-weight:normal; padding:10px; }
.liflabtd { height:30px; }
.centertablediv { display:table; margin:auto; }
.altauthspan { display:inline-block; padding:0px; width:60px; }
#closebookslide { clear:both; }

/* >> profile layout */
#proftopdiv { }
#profshouttd { padding:0px 10px; }
#profcitytd { font-size:small; padding: 0px 10px 5px 10px; }
#profcommbuildtd { font-size:small; padding: 0px 10px 5px 10px; }
#srchpenslinkdiv { font-size:small; padding: 20px 0px 0px 30px; }
.profpic { max-width:125px; max-height:125px; }
#profpictd { width:130px; text-align:right; }
/* fixed width and height on srchpic so the summary lines line up */
.srchpic { width:30px; height:30px; vertical-align:middle; }
.reviewbadge, .reviewbadgedis { 
  width:30px; height:30px; vertical-align:middle; }
.reviewbadgedis { opacity:0.3; filter:alpha(opacity=30); }
#profbadgestd { padding: 0px 10px 5px 10px; width:300px; }
.revtypeselectiondiv { padding:15px; font-size:x-large; }
/* width dynamically modified in profile.styleShout */
.textareatd { }
.shoutout, .shoutoutstatic { text-align:left;
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
  font-size:small; }
.shoutout { width:200px; min-height:100px; }
.shoutoutstatic { width:600px; padding:10px; }
#proftabsdiv ul { list-style:none; padding:0; margin:0; }
#proftabsdiv ul li { display:inline; 
  border-top-left-radius:5px; border-top-right-radius:5px;
  border-top:  1px solid #666;
  border-left: 1px solid #666;
  border-right: 1px solid #666;
 }
#proftabsdiv a { padding: 0 1em; }
.unselectedTab { border-bottom: 1px solid #666; }
#profdisptable { }
.headingtxt { font-size:large; font-weight:bold; text-align:center; }
.formstyle { font-size:small; }
.penlist { list-style:none; padding:0; margin:0; }
.sumtotal { font-size:small; }
#srchmessagespan { font-size:small; }
.smalltext { font-size:small; }
.reviewformul { list-style:none; padding:0; margin:0; }
.revdisptable { margin-left:auto; margin-right:auto; }
.revdisptable td { padding:2px 5px; }
#transformactionstd { padding:2px 5px 10px 15px; }
#revformbuttonstd { }
#revbuttonsdiv { margin-left:15%; }
#socialrevactdiv { margin-left:4%; }
#staticsocialrevactdiv { margin-left:1%; padding:20px 0px; }
.revtitle { font-size:large; font-weight:bold; }
.revauthor { font-size:large; font-style:italic; }
.secondaryfield { font-style:italic; }
.revlist { list-style:none; padding:0; margin:0; }
.revlist li { padding:4px; }
.revimg { max-width:125px; height:auto; }
.revtextsummary { font-size:small; padding: 0px 0px 0px 97px; }
.rslc { font-size:medium; }
.rslcbold { font-size:medium; font-weight:bold; }
.morerevs { font-size:small; padding: 0px 0px 0px 30px; }
.webjump { width:20px; height:20px; vertical-align:middle; border:none }
.csvstrdiv { padding:5px; }
.bigoverlabel { font-size:large; font-weight:bold; padding:25px 0px 0px 0px; }
#statnoticediv { background:#eee; padding:15px;
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
  font-size:small; text-align:center;
  border: 1px solid #666666; border-radius:10px; 
  box-shadow:10px 10px 5px #888888; }
.statnoticeactlinktable { margin-left:auto; margin-right:auto; padding:10px; }
.statnoticeactlinktable td { }
/* only actual buttons should look like buttons */
.buttondiv { padding:5px; font-size:large; }
.searchtable td { padding:5px 10px; }
#userin, #passin { width:152px; }
.tagline { font-style:italic; color:#333; }
#statrevactdiv { text-align:center; padding:10px; }
/* width: ratstar: 60, type: 50, nbsp separator and padding */
#starstd { text-align:right; width:150px; }
.inlinestarsimg { vertical-align:bottom; }
.starsimg { vertical-align:middle; }
.permalink { font-size:xx-small; }
.actbuttons { padding:10px; }
#chpstatdiv { padding:10px; }
.buttontable { cursor:pointer; }
.buttontable:hover { text-decoration:underline; }
.buttontable td { padding:0px; }
.buttontabletexttd { text-align:left; font-size:large; }
.pennametable td { padding:0px 10px; }
.colorattrtd { font-size:small; text-align:right; }
.colorswatch { height:20px; width:40px; cursor:pointer; }
#colortitlediv { text-align:center; border-top: 1px solid #666; }
#revsavemsg { font-size:x-large; padding:5px; }
#fstatdescr { padding: 0px 0px 5px 60px; }
.hintText { font-size:small; font-style:italic; padding:20px; }
.relctrlsdiv { font-size:small; }

/* >> review layout */
#revfdiv { }
.linksdiv { padding:10px; text-align:center; }

/* >> activity layout */
#switchmodebutton { vertical-align:middle; margin:10px 20px; }
#revtypeseldiv { }
#toptd { padding:0px 20px 0px 0px; }
#alltd { padding:0px 10px 0px 20px; }
.actmodesel { color:#ffd100; }
.actmodeseldis { color:#999999; }
#rsslink { padding:0px 0px 0px 10px; }

/* >> settings dialog */
#accset { font-size:small; }

/* >> tips dialog */
.dismissradiodiv { padding:10px 5px 20px 5px; font-size:small; }
.rightclick { font-size:large; font-style:italic; color: #333; }
.tipsbuttondiv { padding:0px 0px 20px 0px; font-size:large; font-weight:bold; 
 text-align:center;}

/* >> general classes */
.greytxt { color:#999999; }

